--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body{
 	overflow-x: hidden;
 }
 img {
-	width:300px; 
+	width:300px;
 }
 h2{
 	margin:0;
@@ -44,7 +44,7 @@ h1{
 	overflow: hidden;
 	white-space: nowrap;
 
-	
+
 }
 h3{
 	margin:16px 0;
@@ -65,7 +65,7 @@ p a{
 }
 .btn{
 	background:var(--color3);
-	border-radius: 4px;	
+	border-radius: 4px;
 	padding: 8px;
 	display:inline-block;
 	text-decoration:none;
@@ -91,7 +91,7 @@ p a{
 /*ABOUT / PROFILE
 ---------------------------------------------*/
 header{
-	background:var(--color1);	
+	background:var(--color1);
 	color:var(--fontColor1);
 	text-align:center;
 }
@@ -106,7 +106,8 @@ header{
 
 }
 .project-wrap img{
-	flex:0 0 300px;
+	flex:0 0;
+	max-height: 250px;
 	border: 5px solid #202020;
 	border-radius:10px;
 }
@@ -136,7 +137,7 @@ header{
 .doctorizer-video-container.active{
 	visibility:visible;
 	opacity:1;
-}	
+}
 
 .doctorizer-video-container video{
 	position:relative;
@@ -207,7 +208,7 @@ footer .container{
 /*RESPONSIVE
 ---------------------------------------------*/
 @media screen and (max-width: 870px){
-	
+
 	.work .container section{
 	display:block;
 }
